<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cor_fundo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CadastroEmpresaActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/farmaapp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="96dp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/cadastro"
        android:textColor="@color/verde_mais_escuro"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCadastroNomeDono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroNomeEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/nEstabelecimento"
        android:inputType="textPersonName"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroTelefoneComercial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/telefoneComercial"
        android:inputType="number"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroEnderecoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/endereco"
        android:inputType="textPersonName"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/categoriaEmpresa"
        android:inputType="textPersonName"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroTempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/tempoEntrega"
        android:inputType="number"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/precoEntrega"
        android:inputType="numberDecimal"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />



    <EditText
        android:id="@+id/editCadastroEmailEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="485dp" />

    <EditText
        android:id="@+id/editCadastroSenhaEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="641dp" />

    <Button
        android:id="@+id/buttonCadastroEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_botao"
        android:padding="12dp"
        android:textSize="16sp"
        android:text="@string/cadastrar"
        />

</LinearLayout>

</ScrollView>