<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.EditarEmpresaActivity">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagePerfilEmpresa"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/perfil" />

            <TextView
                android:id="@+id/textAlterarFotoE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/alterarFoto"
                android:textColor="@color/verde_mais_escuro"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNomeEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_empresa"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/nEstabelecimento"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editEmailEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_email"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editCategoriaEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_categoria"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/categoriaEmpresa"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTempoEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_tempo"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/tempoEntrega"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPrecoEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/ic_preco"
                android:ems="10"
                android:hint="@string/precoEntrega"
                android:inputType="numberDecimal"
                android:padding="14dp" />

            <EditText
                android:id="@+id/editTelefoneCEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_telefone"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/telefoneComercial"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editEnderecoEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_local"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/endereco"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editNomeDono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_perfil"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTelefonePEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@drawable/ic_celular"
                android:background="@drawable/bg_edit_text"
                android:padding="14dp"
                android:ems="10"
                android:hint="@string/telefonePessoal"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonSalvarEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_botao"
                android:padding="12dp"
                android:text="@string/salvar"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>