<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_fundo"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/farmaapp" />

        <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editLoginSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/buttonEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_botao"
            android:padding="12dp"
            android:text="@string/entrar"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/cadastrar"
            android:textColor="@color/verde_mais_escuro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCadastrarEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cadastrarEmpresa"
            android:textColor="@color/verde_mais_escuro"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>