<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_fundo"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activity.CadastroActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/farmaapp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="96dp"
            android:contentDescription="TODO" />

        <EditText
            android:id="@+id/editCadastroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="485dp" />

        <EditText
            android:id="@+id/editCadastroTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="textPersonName"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="485dp" />

        <EditText
            android:id="@+id/editCadastroEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/endereco"
            android:inputType="textPersonName"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="485dp" />


        <EditText
            android:id="@+id/editCadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="485dp" />

        <EditText
            android:id="@+id/editCadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="641dp" />

        <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_botao"
            android:padding="12dp"
            android:textSize="16sp"
            android:text="@string/cadastrar"
        />
    </LinearLayout>
</ScrollView>