<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NovoProdutoActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/adicionar"
            android:textColor="@color/verde_mais_escuro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="485dp" />

        <EditText
            android:id="@+id/editDescricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="textPersonName"
            android:padding="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="641dp" />

        <EditText
            android:id="@+id/editPrecoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/preco"
            android:inputType="numberDecimal"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-27dp"
            tools:layout_editor_absoluteY="485dp" />

        <Button
            android:id="@+id/buttonCadastrarProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_botao"
            android:padding="12dp"
            android:textSize="16sp"
            android:text="@string/cadastrar"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>